--- a/11A2.css
+++ b/11A2.css
@@ -21,7 +21,7 @@ body{
     overflow-x: hidden;
     margin: 0;
     padding: 0;
-    background-color: black;
+    background-color: var(--darker-black);
 }
 #search{ 
     width: auto;
@@ -66,7 +66,6 @@ div.menu{
     position:relative;
     width: var(--VIEWER_WIDTH);
     overflow: hidden;
-    border: 1px solid black;
 }
 div.menu-item{
     display: inline-block;
@@ -81,7 +80,6 @@ div.menu-item{
     
     font-size: 100px;
     animation: moving var(--duration_of_each_item) linear infinite;
-    
     animation-delay: calc(var(--duration_of_each_item)/var(--number_OF_ITEMS) * (2*var(--number_OF_ITEMS)) - (2*var(--i)));
 }
 /*==========THIS WILL BE REMOVE EVENTUALLY CAUSE IT CAUSE ANIMATION GLITCH========== BUT ALSO MIsleading*/
@@ -98,7 +96,7 @@ div.menu-item{
     */
 div.flyer{
     width: var(--VIEWER_WIDTH);
-    background-color: black;
+    background-color: var(--darker-black);
     transition: background-color 0.3s ease-in-out;
 }
 @media only screen and (min-width: 700px){
@@ -110,30 +108,31 @@ div.flyer{
         justify-content: center;
         align-items: center;
     }
+
+/*====================HEADLINE-FLYER============*/
     div.flyer:has(h1){
         background-color: black;
+        transition: background-color 1.3s ;
     }
     div.flyer h1{
         font-size: 340px;
-        color: var(--energetic--yellow);
+        color: var(--darker-black);
         font-weight: bold;
         letter-spacing: 0.05em;
         text-align: center;
         text-shadow: 0px 0px 0px var(--lightblue);
-        color: black;
-        transition: all 2s;
+        transition: text-shadow 1s, color 1s;
     }
 
 
 /*======================== DIV OF CIRCLE==============================*/
     div.flyer:has(.CIRCLE){
-        background-color: black;
     }
     div.flyer div.flyer-extender{
         position: absolute;
         width: calc(var(--VIEWER_WIDTH)* 0.55);
         height: inherit;
-        background-color: black /*same color as flyer*/;
+        background-color: var(--darker-black)/*same color as flyer*/;
         transform-origin: right;
     }
     div.CIRCLE{
@@ -148,7 +147,7 @@ div.flyer{
     div.CIRCLE.ONE{
         width: var(--CIRCLE1);
         height: var(--CIRCLE1);
-        background-color: aqua;
+        background-color: var(--lightblue);
         z-index: 100;
         top: calc((var(--FLYER-HEIGHT) - var(--CIRCLE1))/2);
         left: calc(0vw - var(--CIRCLE1)/2);
@@ -160,11 +159,11 @@ div.flyer{
      div.CIRCLE.TWO{
         width: calc(var(--CIRCLE1)*0.3);
         height:calc(var(--CIRCLE1)*0.3);
-        background-color: white;
+        background-color: var(--tomato);
         z-index: 101; /*z-index interact with circle one*/
         bottom: calc(var(--FLYER-HEIGHT)* 0.02);
         left:  calc(var(--VIEWER_WIDTH)* 0.02);
-        color: aqua;
+        color: var(--notso-energetic-yellow);
         font-size: calc(var(--CIRCLE1)*0.2);
     }
     }
@@ -173,7 +172,7 @@ div.flyer{
         height:calc(var(--CIRCLE1)*0.5);
         left: calc(var(--VIEWER_WIDTH) * 0.16);
         top: calc(var(--FLYER-HEIGHT)*0.1);
-        background-color: brown;
+        background-color: var(--tomato);
         img{
         height: 70%;
         width: 70%;
@@ -213,12 +212,12 @@ div.flyer.background{
     opacity: 0;
 }
 div.flyer:has(.GRID){
-    background-color: black;
+    background-color: var(--darker-black);
 }
 div.GRID{
     width: inherit;
     height: inherit;
-    border: 2px solid black;
+    border: 2px solid var(--darker-black);
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(3, 1fr);
@@ -230,7 +229,7 @@ div.GRID{
 }
 div.trans1, div.trans2, div.trans3, div.trans4, div.trans5, div.trans6{
     background-color: transparent;
-    border: 3px solid black;
+    border: 3px solid var(--darker-black);
 }
 trans1{
     grid-area: trans1;
@@ -251,8 +250,8 @@ trans6{
     grid-area: trans6;
 }
 div.black.a, div.black.b, div.black.c, div.black.d{
-    background-color: black;
-    border: 1px solid black;
+    background-color: var(--darker-black);
+    border: 1px solid var(--darker-black);
 }
 div.black.a{
     grid-area: blacka;
@@ -267,9 +266,9 @@ div.black.d{
     grid-area: blackd;
 }
 div.GRID div.blacktag{
-    border: 3px solid black;
-    background-color: black;
-    color: rgb(134, 58, 58);
+    border: 3px solid var(--darker-black);
+    background-color: var(--darker-black);
+    color: var(--notso-energetic-yellow);
     font-size: 82px;
     font-weight: bold;
     line-height: 0.8;
@@ -277,25 +276,66 @@ div.GRID div.blacktag{
     text-align: left;
     padding: 8px;
 }
+/*==========================FLYER of STACKING====================================*/
+div.card{
+    h2{
+        font-size: 16vw;
+        font-weight: bold;
+        text-align: center;
+    }
+    text-align: center;
+    display: inline-flex;
+    width: 100vw;
+    border-radius: 2vw;
+    border-bottom-right-radius: 0 ;
+    border-bottom-left-radius: 0;
+    position: sticky;
+    align-content: center;
+    justify-content: flex-start;
+    flex-direction: column;
+    flex-wrap: wrap;
+    height: calc(100vh);
+    top: calc(-10vh + 5vh *var(--i));
+    transform: translate(0, calc(-5vh*var(--i)));
+}
+div.card.A{
+    background-color: var(--complement-of-yellow);
+}
+div.card.B{
+    background-color: var(--lightblue);
+}
+div.card.C{
+    background-color: var(--passion-orange);
+}
+div.card.D{
+    background-color:var(--tomato);
+    position: relative;
+    top: 0;
+    height: 100vh;
+    z-index: 0;
+     /*need adjustment*/
+    transform: scaleY(1.3);
+}
 
 /*========================FLYER OF TRAPEZIUM==============================*/
 div.flyer:has(.trapzoid){
     background-color: blue;
 }
 .trapzoid{
+    /* trapzoid should be block-level and anchored to its parent flyer */
     display: inline;
     position: absolute;
-    width: calc(var(--VIEWER_WIDTH) /1.81);
+    width: calc(var(--VIEWER_WIDTH) / 1.81);
     height: inherit;
     text-align: center;
-    padding: calc(var(--FLYER-HEIGHT) /2.5) 0 calc(var(--FLYER-HEIGHT) /2.5) 0 ;
-    color: white;  
+    padding: calc(var(--FLYER-HEIGHT) / 2.5) 0 calc(var(--FLYER-HEIGHT) / 2.5) 0;
+    color: white;
     font-size: 55px;
     font-weight: 700;
     clip-path: polygon(25% 0, 95% 0, 75% 100%, 5% 100%);
     background-size: cover;
-    background-position: center center; /*205%;/*190% is to zoom pic even more downward*/
-    background-attachment:scroll;
+    background-position: center center; /*190% is to zoom pic even more downward*/
+    background-attachment: scroll;
     background-repeat: no-repeat;
 }
 
