ANDY YOU BIGGER DO YOUR WORK

--- a/11A2.css
+++ b/11A2.css
@@ -276,6 +276,7 @@ div.GRID div.blacktag{
     text-align: left;
     padding: 8px;
 }
+/*ANDY DO IT*/
 /*==========================FLYER of STACKING====================================*/
 div.card{
     h2{
